--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -93,7 +93,7 @@
 /* TOPICS'S POSTS SCREEN */
 .topic-posts-container {
   min-width: 70%;
-  max-width: 95%;
+  max-width: 100%;
   /* border: 4px solid #f110e2; */
   min-height: 65vh;
   display: flex;
@@ -330,9 +330,8 @@
     margin: auto;
   }
 
-  /* .topic-posts-container {
-    border: black solid 5px;
-  } */
+ 
+
 }
 
 /* Medium screens */
