--- a/src/styles/SkeletonPetCard.css
+++ b/src/styles/SkeletonPetCard.css
@@ -1,32 +1,49 @@
 /* SkeletonPetCard.css */
 .skeleton-pet-card {
-    position: relative; 
-    border: 1px solid #e7e6e6;
-    margin: 5px;
-    background-color: var(--greyish-hue);
-    box-shadow: 0 6px 4px rgba(0, 0, 1, 0.1);
+  position: relative; 
+  border: 1px solid #e7e6e6;
+  margin: 5px;
+  background-color: var(--greyish-hue);
+  box-shadow: 0 6px 4px rgba(0, 0, 1, 0.1);
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  text-align: center; 
+  width: 240px;
+  max-width: 300px;
+  height: 460px; 
+  overflow: hidden;
+  border: 2px solid transparent; 
+  border-radius: 15px;
+}
+
+.skeleton-image {
+  width: 100%;
+  height: 200px; /* Set the height you want for the skeleton image */
+  background-color: #ddd; /* Placeholder color for the skeleton image */
+}
+
+.skeleton-text {
+  height: 20px; /* Set the height you want for the skeleton text */
+  width: 80%;
+  margin-top: 10px;
+  background-color: #ddd; /* Placeholder color for the skeleton text */
+}
+
+/* Responsive styles for smaller screens (e.g., phones) */
+@media (max-width: 600px) {
+
+  .skeleton-petcard-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center the cards horizontally */
+    margin: 3% auto;
+  }
+  .skeleton-pet-card {
     display: flex;
     flex-direction: column; 
-    align-items: center;
-    text-align: center; 
-    width: 240px;
-    max-width: 300px;
-    height: 460px; 
-    overflow: hidden;
-    border: 2px solid transparent; 
-    border-radius: 15px;
+    width: 90%;
+    padding: 4%;
   }
-  
-  .skeleton-image {
-    width: 100%;
-    height: 200px; /* Set the height you want for the skeleton image */
-    background-color: #ddd; /* Placeholder color for the skeleton image */
-  }
-  
-  .skeleton-text {
-    height: 20px; /* Set the height you want for the skeleton text */
-    width: 80%;
-    margin-top: 10px;
-    background-color: #ddd; /* Placeholder color for the skeleton text */
-  }
-  
+}
